--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">1. Importando librerías necesarias</h2>"
+    "## Importaciones "
    ]
   },
   {
