--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -76,14 +76,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">2. Funciones auxiliares</h2>"
+    "## Funciones auxiliares"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Función para la partición del conjunto de datos"
+    "### Función para la partición del DataSet"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Función para separar las características de entrada de las de salida"
+    "### Separacion de características de entrada "
    ]
   },
   {
