Lectura del DataSet

--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">3. Lectura del conjunto de datos</h2>"
+    "## Lectura del DataSet"
    ]
   },
   {
