--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <h2 style=\"color:blue\">4. Visualización del conjunto de datos</h2>"
+    "## Visualización del DataSet"
    ]
   },
   {
