--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -1380,7 +1380,7 @@
     }
    ],
    "source": [
-    "# Categorías de clasificación de la variable class\n",
+    "# Categorías de clasificación\n",
     "df[\"calss\"].value_counts()"
    ]
   },
