Division del DataSet

--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -1388,7 +1388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">5. División del conjunto de datos</h2>"
+    "## División del DataSet"
    ]
   },
   {
