--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -1436,7 +1436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">6. Random Forests</h2>"
+    "## Random Forests"
    ]
   },
   {
@@ -1463,21 +1463,15 @@
     }
    ],
    "source": [
-    "# Nuestro objetivo es reducir las características de entrada de manera que hagamos selección de características,\n",
-    "# mejorar el tiempo de entrenamiento de nuestro modelo, mejorar el rendimiento de clasificación o predicción del modelo.\n",
+    "# Reducimos las características de entrada de manera que hagamos selección de características,\n",
+    "# mejoramos el tiempo de entrenamiento de nuestro modelo, el rendimiento de clasificación del modelo.\n",
     "\n",
-    "# Lo primero que tenemos que hacer para realizar la selección de características mediante el uso de Random Forest, es\n",
-    "# entrenar un estimador o un predictor Random Forest. \n",
     "\n",
-    "# Luego importamos el predictor \"RandomForestClassifier\" de \"sklearn.ensemble\" y lo entrenamos.\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Instanciamos la clase \"RandomForestClassifier\" en el objeto \"clf_rnd\" y le pasamos los siguientes parámetros:\n",
     "\n",
-    "# n_estimators=50 -> número de estimadores = 50, es decir, va a entrenar 50 árboles aleatorios \n",
-    "# random_state=42 -> plantamos una semilla\n",
-    "# n_jobs=-1 -> usar todas las capacidades y recursos de nuestro procesador para entrenar el algoritmo en paralelo si fuera\n",
-    "#              posible.\n",
+    "\n",
     "# Vamos a entrenar 50 árboles aleatorios\n",
     "clf_rnd = RandomForestClassifier(n_estimators=50, random_state=42, n_jobs=-1)\n",
     "\n",
