Importancia de las caracteristicas

--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -1524,7 +1524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">7. Importancia de las características</h2>"
+    "## Importancia de las características"
    ]
   },
   {
