--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -1710,8 +1710,6 @@
     }
    ],
    "source": [
-    "# Transformamos el objeto anterior de array a formato series de pandas\n",
-    "# Visualizamos el top 20\n",
     "feature_importances_sorted = pd.Series(feature_importances).sort_values(ascending=False)\n",
     "feature_importances_sorted.head(20)"
    ]
@@ -1720,7 +1718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue\">8. Reducción del número de características</h2>"
+    "## Reducción del número de características"
    ]
   },
   {
