--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -2248,7 +2248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reentrenamos el algoritmo con la data de entrenamiento reducida"
+    "### Reentrenamiento"
    ]
   },
   {
