Evaluacion del modelo

--- a/Tecnicas_de_seleccion_de_características.ipynb
+++ b/Tecnicas_de_seleccion_de_características.ipynb
@@ -2326,7 +2326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Como puede observarse en la casilla anterior el rendimiento de nuestro modelo empeora muy poco eliminando 69 de las 79 características de las que disponía. Por otro lado, el rendimiento en el entrenamiento y en la predicción mejora sustancialmente.**"
+    "**El rendimiento de nuestro modelo empeora muy poco eliminando 69 de las 79 características de las que disponía. Por otro lado, el rendimiento en el entrenamiento y en la predicción mejora sustancialmente.**"
    ]
   },
   {
